# shadow

./: .gitignore  AGENTS.md  flake.nix  justfile  plan.md
.agents/skills/orchestrate/: SKILL.md
docs/: architecture.md  tutorial.md
runtime/app-compile-smoke/: app.tsx
runtime/app-input-smoke/: app.tsx
runtime/app-keyboard-smoke/: app.tsx
runtime/app-nostr-gm/: app.tsx
runtime/app-nostr-smoke/: app.tsx
runtime/app-nostr-timeline/: app.tsx
runtime/app-podcast-player/: app.tsx
runtime/app-runtime/: shadow_runtime_os.js  shadow_runtime_solid.js
runtime/app-sound-smoke/: app.tsx
runtime/app-toggle-smoke/: app.tsx
rust/deno-core-smoke/: Cargo.toml
rust/deno-core-smoke/modules/: main.js  message.js
rust/deno-core-smoke/src/: main.rs
rust/deno-runtime-smoke/: Cargo.toml
rust/deno-runtime-smoke/src/: main.rs
rust/drm-rect/: Cargo.toml
rust/drm-rect/src/: lib.rs
rust/init-wrapper/src/: main.rs
rust/runtime-audio-host/: Cargo.toml
rust/runtime-audio-host/js/: bootstrap.js
rust/runtime-audio-host/src/: lib.rs
rust/runtime-nostr-host/: Cargo.toml
rust/runtime-nostr-host/js/: bootstrap.js
rust/runtime-nostr-host/src/: lib.rs  relay_publish.rs
rust/rusty-v8-smoke/: Cargo.toml
rust/rusty-v8-smoke/src/: main.rs
rust/shadow-runtime-host/: Cargo.toml
rust/shadow-runtime-host/src/: main.rs
rust/shadow-session/src/: main.rs
scripts/: agent-brief  blitz_demo_guest_compositor_smoke.sh  cf_common.sh  cf_kill.sh  cf_launch.sh  cf_logs.sh  cf_stock.sh  ci.sh  desktop_prepare_fonts.sh  pixel_blitz_demo_drm.sh  pixel_blitz_demo_static_drm.sh  pixel_blitz_demo_static_drm_gpu_probe.sh  pixel_blitz_demo_static_drm_gpu_softbuffer.sh  pixel_build.sh  pixel_build_blitz_demo.sh  pixel_build_openlog_preload.sh  pixel_common.sh  pixel_doctor.sh  pixel_drm_rect.sh  pixel_guest_ui_drm.sh  pixel_guest_ui_drm_blitz_size.sh  pixel_guest_ui_drm_fullscreen.sh  pixel_guest_ui_drm_selftest.sh  pixel_linux_audio_spike.sh  pixel_loop.sh  pixel_openlog_preload.c  pixel_prepare_blitz_demo_gpu_bundle.sh  pixel_prepare_blitz_demo_gpu_softbuffer_bundle.sh  pixel_prepare_runtime_app_artifacts.sh  pixel_prepare_shell_runtime_artifacts.sh  pixel_push.sh  pixel_restore_android.sh  pixel_root_check.sh  pixel_run.sh  pixel_runtime_app_click_drm.sh  pixel_runtime_app_drm.sh  pixel_runtime_app_drm_hold.sh  pixel_runtime_app_nostr_gm_drm.sh  pixel_runtime_app_nostr_gm_drm_hold.sh  pixel_runtime_app_nostr_timeline_drm.sh  (+50 more)
todos/: app-runtime.md  deno.md  gpu.md  nostr.md
ui/: Cargo.toml  README.md
ui/apps/shadow-blitz-demo/: Cargo.toml
ui/apps/shadow-blitz-demo/assets/: app.ts
ui/apps/shadow-blitz-demo/src/: app.rs  document.rs  frame.rs  log.rs  main.rs  protocol.rs  runtime.rs  runtime_document.rs  runtime_session.rs
ui/apps/shadow-cog-demo/: Cargo.toml
ui/apps/shadow-cog-demo/assets/: app.js  index.html  styles.css
ui/apps/shadow-cog-demo/src/: main.rs
ui/apps/shadow-counter/: Cargo.toml
ui/apps/shadow-counter-guest/src/: wayland.rs
ui/apps/shadow-counter/src/: color.rs  desktop.rs  layout.rs  main.rs  model.rs  scene.rs  wayland.rs
ui/apps/shadow-status/: Cargo.toml
ui/apps/shadow-status/src/: color.rs  desktop.rs  layout.rs  main.rs  model.rs  primitives.rs  renderer.rs  scene.rs  text.rs  wayland.rs
ui/crates/shadow-compositor/: Cargo.toml
ui/crates/shadow-compositor-guest/: Cargo.toml
ui/crates/shadow-compositor-guest/src/: control.rs  kms.rs  launch.rs  main.rs  shell.rs  touch.rs
ui/crates/shadow-compositor/src/: control.rs  input.rs  launch.rs  main.rs  render.rs  shell.rs  state.rs  winit.rs  winit_backend.rs
ui/crates/shadow-compositor/src/handlers/: compositor.rs  mod.rs  xdg_shell.rs
ui/crates/shadow-ui-core/: Cargo.toml
ui/crates/shadow-ui-core/src/: app.rs  color.rs  control.rs  lib.rs  scene.rs  shell.rs
ui/crates/shadow-ui-core/src/shell/: mod.rs  view.rs
ui/crates/shadow-ui-desktop/src/: main.rs
ui/crates/shadow-ui-software/: Cargo.toml
ui/crates/shadow-ui-software/src/: lib.rs
ui/crates/shadow-ui-wgpu/: Cargo.toml
ui/crates/shadow-ui-wgpu/src/: lib.rs  renderer.rs  text.rs
ui/src/: main.rs
vm/: shadow-ui-vm.nix
