[package]
name = "shadow-ui-desktop"
version.workspace = true
edition.workspace = true

[workspace]
resolver = "2"
members = [
    "crates/shadow-ui-core",
    "crates/shadow-ui-software",
    "crates/shadow-ui-wgpu",
    "crates/shadow-compositor",
    "apps/shadow-cog-demo",
    "apps/shadow-blitz-demo",
    "apps/shadow-counter",
    "apps/shadow-status",
]
default-members = [
    ".",
    "crates/shadow-ui-core",
    "crates/shadow-ui-software",
    "crates/shadow-ui-wgpu",
    "crates/shadow-compositor",
    "apps/shadow-cog-demo",
    "apps/shadow-blitz-demo",
    "apps/shadow-counter",
    "apps/shadow-status",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
bytemuck = { version = "1.24.0", features = ["derive"] }
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
font8x8 = "0.3.1"
glyphon = "0.10.0"
pollster = "0.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
wgpu = "28.0.0"
winit = "0.30.13"

[dependencies]
chrono.workspace = true
pollster.workspace = true
shadow-ui-core = { path = "crates/shadow-ui-core" }
shadow-ui-wgpu = { path = "crates/shadow-ui-wgpu" }
wgpu.workspace = true
winit.workspace = true
