[package]
name = "deno-runtime-smoke"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
deno_core = { version = "=0.393.0", default-features = false, features = ["include_icu_data", "reactor-tokio"] }
deno_error = "=0.7.1"
deno_resolver = { version = "=0.71.0", features = ["sync"] }
deno_runtime = "=0.248.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sys_traits = { version = "=0.1.25", features = ["real"] }
tokio = { version = "1.47.1", features = ["rt", "time"] }
