[package]
name = "runtime-nostr-host"
version = "0.1.0"
edition = "2021"

[dependencies]
deno_core = { version = "=0.393.0", default-features = false, features = ["include_icu_data"] }
deno_error = "=0.7.1"
nostr = "0.44.2"
nostr-sdk = "0.44.1"
qrcodegen = "1.8.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.50.0", features = ["time"] }
