[package]
name = "shadow-counter"
version.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
shadow-ui-core = { path = "../../crates/shadow-ui-core" }

[target.'cfg(not(target_os = "linux"))'.dependencies]
pollster.workspace = true
shadow-ui-wgpu = { path = "../../crates/shadow-ui-wgpu" }
wgpu.workspace = true
winit.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
font8x8 = "0.3.1"
smithay-client-toolkit = "0.20.0"
wayland-client = "0.31.13"
