[package]
name = "shadow-counter"
version.workspace = true
edition.workspace = true

[dependencies]
shadow-ui-core = { path = "../../crates/shadow-ui-core" }

[target.'cfg(not(target_os = "linux"))'.dependencies]
winit.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
font8x8 = "0.3.1"
smithay-client-toolkit = { version = "0.20.0", default-features = false, features = ["calloop", "xkbcommon"] }
wayland-client.workspace = true
