[package]
name = "shadow-compositor-guest"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0"
drm = "0.14.1"
evdev = "0.13.2"
libc = "0.2"
shadow-ui-core = { path = "../shadow-ui-core" }
smithay = { version = "0.7.0", default-features = false, features = ["desktop", "wayland_frontend"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile = "3.27"
