[package]
name = "shadow-compositor"
version.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
shadow-ui-core = { path = "../shadow-ui-core" }
shadow-ui-software = { path = "../shadow-ui-software" }
tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
smithay = { version = "0.7.0", default-features = false, features = ["backend_winit", "desktop", "wayland_frontend"] }
